--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -13,12 +13,12 @@
     </header>
 
     <nav class="w3-bar w3-black">
-        <a href="home.html" class="w3-bar-item w3-button w3-mobile w3-white w3-text-black">Home</a>
-        <a href="contact.html" class="w3-bar-item w3-button w3-mobile">Contact</a>
-        <a href="hours.html" class="w3-bar-item w3-button w3-mobile">Hours</a>
-        <a href="menu.html" class="w3-bar-item w3-button w3-mobile">Menu</a>
-        <a href="reservation.html" class="w3-bar-item w3-button w3-mobile">Reservations</a>
-        <a href="privacy.html" class="w3-bar-item w3-button w3-mobile">Privacy Policy</a>
+        <a href="../home.html" class="w3-bar-item w3-button w3-mobile w3-white w3-text-black">Home</a>
+        <a href="../contact.html" class="w3-bar-item w3-button w3-mobile">Contact</a>
+        <a href="../hours.html" class="w3-bar-item w3-button w3-mobile">Hours</a>
+        <a href="../menu.html" class="w3-bar-item w3-button w3-mobile">Menu</a>
+        <a href="../reservation.html" class="w3-bar-item w3-button w3-mobile">Reservations</a>
+        <a href="../privacy.html" class="w3-bar-item w3-button w3-mobile">Privacy Policy</a>
     </nav>
 
     <main class="w3-container w3-center">
