--- a/web/private/staff.html
+++ b/web/private/staff.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav class="w3-bar w3-black">
-        <a href="../home.html" class="w3-bar-item w3-button w3-mobile w3-white w3-text-black">Home</a>
+        <a href="../home.html" class="w3-bar-item w3-button w3-mobile">Home</a>
         <a href="../contact.html" class="w3-bar-item w3-button w3-mobile">Contact</a>
         <a href="../hours.html" class="w3-bar-item w3-button w3-mobile">Hours</a>
         <a href="../menu.html" class="w3-bar-item w3-button w3-mobile">Menu</a>
@@ -22,6 +22,73 @@
     </nav>
 
     <main class="w3-container w3-center">
+        <p>William Tasker: 021 345 6789</p>
+        <p>Bob White: 022 456 7891</p>
+        <p>Carol Newman: 027 294 2354</p>
+        <p>Becky Smith: 021 366 4455</p>
+        <hr>
+
+        <table style="width:100%">
+            <tr>
+                <th>Roster</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+                <th>Sunday</th>
+            </tr>
+            <tr>
+                <th>Week 1</th>
+                <th><pre>William
+Bob
+Carol</pre></th>
+                <th><pre>Becky
+William
+Bob</pre></th>
+                <th><pre>Carol
+Becky
+William</pre></th>
+                <th><pre>Bob
+Carol
+Becky</pre></th>
+                <th><pre>William
+Bob
+Carol</pre></th>
+                <th><pre>Becky
+William
+Bob</pre></th>
+                <th><pre>Carol
+Becky
+William</pre></th>
+            </tr>
+            <tr>
+                <th>Week 2</th>
+                <th><pre>Bob
+Carol
+Becky</pre></th>
+                <th><pre>William
+Bob
+Carol</pre></th>
+                <th><pre>Becky
+William
+Bob</pre></th>
+                <th><pre>Carol
+Becky
+William</pre></th>
+                <th><pre>Bob
+Carol
+Becky</pre></th>
+                <th><pre>William
+Bob
+Carol</pre></th>
+                <th><pre>Becky
+William
+Bob</pre></th>
+            </tr>
+        </table>
+
     </main>
 
     <footer class="w3-container w3-amber">
