--- a/web/menu.html
+++ b/web/menu.html
@@ -7,6 +7,18 @@
     <title>Our Menu</title>
 </head>
 
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=GA_G-ED91PV7H4H"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+        dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'GA_G-ED91PV7H4H');
+</script>
+
 <body>
     <header class="w3-container w3-amber w3-padding-32">
         <h1>The Haukai Restraunt</h1>
